--- a/index.css
+++ b/index.css
@@ -5,8 +5,17 @@
 
 header{
     display: flex;
-    flex-direction: column;
+    justify-content:space-between;
 }
 .dropDown{
     display: flex;
+    width: 1100px;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
