--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
 #logoAlgrent {
     width: 164px;
-    height: 74px;
+    height: max-content;
 }
 
-header{
+header {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
+    height: 10vh;
 }
-.dropDown{
+
+.dropDown {
     display: flex;
     width: 1100px;
     justify-content: space-evenly;
