--- a/form.css
+++ b/form.css
@@ -4,3 +4,12 @@
     border-radius: 5px;
     background: #F6F6F6;
 }
+#formPage{
+    display: flex;
+}
+#inputContainer{
+  margin:3vw;
+  display: flex;
+  flex-direction: column;
+  gap:5vw;
+}
