--- a/form.css
+++ b/form.css
@@ -1,6 +1,17 @@
-.input{
+.input {
     width: 42vw;
     height: 2.5vh;
     border-radius: 5px;
     background: #F6F6F6;
+}
+
+#formPage {
+    display: flex;
+    gap: 10vw;
+}
+
+#formContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
