--- a/form.css
+++ b/form.css
@@ -19,12 +19,19 @@
     background: #F6F6F6;
 }
 
+#info {
+    width: 42vw;
+}
+
 #formPage {
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     height: 90vh;
     width: 100vw;
     gap: 3vw;
 }
+
 
 #inputContainer {
     display: flex;
@@ -35,5 +42,6 @@
 
 
 #formPage>img {
-    height: 100%;
+    height: 90%;
+    width: 30vw;
 }
