--- a/form.css
+++ b/form.css
@@ -59,3 +59,23 @@
     border-radius: 5px;
     font-size: 20px;
 }
+
+main{
+    display: flex;
+    justify-content: center;
+}
+
+.confirmOrder{
+    display: flex;
+    width: 40vw;
+    height: 65vh;
+    background-color: #F6F6F6;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#conrirm{
+    display: flex;
+    align-items: center;
+}
