--- a/index.css
+++ b/index.css
@@ -27,3 +27,11 @@ header {
     font-weight: 400;
     line-height: normal;
 }
+
+.läsMer{
+    color: #589858;
+    font-size: 1.5vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
