--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #f9fcfb;
     margin: 0;
 }
 
@@ -8,14 +9,20 @@ body {
 }
 
 header {
+    background-color: #f9fcfb;
     display: flex;
-    justify-content: space-between;
-    height: 10vh;
+    justify-content: center;
+    align-items: center;
+    height: 13vh;
+    gap: 36vw;
+    position: sticky;
+    top: 0;
+
 }
 
 .dropDown {
     display: flex;
-    width: 1100px;
+    width: 50vw;
     justify-content: space-evenly;
     align-items: center;
     color: #000;
@@ -26,13 +33,21 @@ header {
     line-height: normal;
 }
 
+.dropDown>div:hover {
+    color: #589858;
+}
+
+.dropDown>div {
+    cursor: pointer;
+}
+
 #startingPage {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100vw;
-    gap: 60px;
+    gap: 11vh;
 }
 
 #startImg {
@@ -62,7 +77,7 @@ header {
     justify-content: center;
 
     flex-direction: column;
-    gap: 1vw;
+    gap: 2vw;
 
 }
 
@@ -78,11 +93,18 @@ header {
 .MellanstoraBilder>img {
     width: 35vw;
     height: 60vh;
+}
 
-    .läsMer {
-        color: #589858;
-        font-size: 1.5vw;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-    }
+.läsMer {
+    color: #589858;
+    font-size: 1.5vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+footer {
+    background-color: #eaeaea;
+    height: 50vh;
+    width: 100vw;
+}
