--- a/index.css
+++ b/index.css
@@ -118,10 +118,12 @@ footer {
 
 /* Startläge (gömd) */
 .dropDownContainer {
+    padding-left: 1vw;
     position: absolute;
     top: 100%;
     left: 0;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     gap: 10px;
 
@@ -138,9 +140,26 @@ footer {
     transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-/* När man hovrar över menyvalet */
+.dropDownElement {
+    font-size: 15px;
+}
+
+
 .menuItem:hover .dropDownContainer {
     opacity: 1;
     transform: translateY(0);
     pointer-events: auto;
+    padding-left: 1vw;
+}
+
+.scroll-reveal {
+    opacity: 0;
+    transform: translateY(60px);
+    transition: all 0.6s ease-out;
+}
+
+
+.scroll-reveal.visible {
+    opacity: 1;
+    transform: translateY(0);
 }
