--- a/index.css
+++ b/index.css
@@ -120,13 +120,15 @@ footer {
 
 .menuItem {
     position: relative;
+    display: flex;
+    gap: 5px;
 }
 
 
 
 /* Startläge (gömd) */
 .dropDownContainer {
-    padding-left: 1vw;
+    
     position: absolute;
     top: 100%;
     left: 0;
@@ -137,7 +139,7 @@ footer {
 
     background: white;
     border-radius: 5px;
-    padding: 10px 0;
+    padding: 1vw 0 1vw 1vw;
     min-width: 150px;
     z-index: 10;
 
@@ -146,6 +148,7 @@ footer {
     pointer-events: none;
 
     transition: opacity 0.3s ease, transform 0.3s ease;
+    
 }
 
 .dropDownElement {
@@ -164,10 +167,18 @@ footer {
     opacity: 0;
     transform: translateY(60px);
     transition: all 0.6s ease-out;
+    
 }
 
 
 .scroll-reveal.visible {
     opacity: 1;
     transform: translateY(0);
+}
+
+.arrow{
+    width: 15px;
+    height: 10px;
+    display: flex;
+    align-self: center;
 }
