--- a/produkt.css
+++ b/produkt.css
@@ -1,7 +1,7 @@
 #containerProdukt {
     display: flex;
     flex-direction: column;
-    gap: 5vh;
+    gap: 15vh;
     background-color: #f8faf9;
     justify-content: center;
     width: 90vw;
@@ -44,7 +44,8 @@
 }
 
 #TopRightDiv>button {
-    color: #166534;
+    background-color: #166534;
+    color: #f8faf9;
 }
 
 #produktFakta {
@@ -54,7 +55,6 @@
 
 #produktFakta>h1 {
     color: #14532d;
-    margin: 0;
 }
 
 #faktaContainer {
