--- a/produkt.css
+++ b/produkt.css
@@ -78,3 +78,23 @@
     width: 100%;
     flex-direction: column;
 }
+
+
+#containerMidProdukt{
+    display: flex;
+    width: 90vw;
+    gap: 3vw;
+ }
+ 
+ #containerMidProdukt h1{
+     color: #14532D;
+  }
+ 
+ .productImg{
+     width: 200px;
+     border-radius: 5px;
+ }
+ .productImages{
+     display: flex;
+     gap: 1vw;
+ }
