--- a/produkt.css
+++ b/produkt.css
@@ -80,21 +80,37 @@
 }
 
 
-#containerMidProdukt{
+#containerMidProdukt {
     display: flex;
     width: 90vw;
     gap: 3vw;
- }
- 
- #containerMidProdukt h1{
-     color: #14532D;
-  }
- 
- .productImg{
-     width: 200px;
-     border-radius: 5px;
- }
- .productImages{
-     display: flex;
-     gap: 1vw;
- }
+    height: 70vh;
+}
+
+#midLeft {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+}
+
+#containerMidProdukt h1 {
+    color: #14532D;
+}
+
+.productImages {
+    width: 50%;
+}
+
+.productImg {
+    width: 100%;
+    border-radius: 5px;
+    height: 100%;
+}
+
+.productImages {
+    display: flex;
+    gap: 1vw;
+
+}
