--- a/index.css
+++ b/index.css
@@ -84,6 +84,7 @@ header {
 }
 
 .SemiheaderFPage {
+    color: #14532d;
     font-size: 2.3vw;
 }
 
@@ -122,7 +123,7 @@ footer {
 
 /* Startläge (gömd) */
 .dropDownContainer {
-    
+
     position: absolute;
     top: 100%;
     left: 0;
@@ -142,7 +143,7 @@ footer {
     pointer-events: none;
 
     transition: opacity 0.3s ease, transform 0.3s ease;
-    
+
 }
 
 .dropDownElement {
@@ -161,7 +162,7 @@ footer {
     opacity: 0;
     transform: translateY(60px);
     transition: all 0.6s ease-out;
-    
+
 }
 
 
@@ -170,10 +171,9 @@ footer {
     transform: translateY(0);
 }
 
-.arrow{
+.arrow {
     width: 15px;
     height: 10px;
     display: flex;
     align-self: center;
 }
-
