--- a/produkt.css
+++ b/produkt.css
@@ -84,50 +84,63 @@
     display: flex;
     width: 90vw;
     gap: 3vw;
- }
- 
- #containerMidProdukt h1{
-     color: #14532D;
-  }
- 
- .productImg{
-     width: 200px;
-     border-radius: 5px;
- }
- .productImages{
-     display: flex;
-     gap: 1vw;
- }
- .faqItem {
+}
+
+#containerMidProdukt h1 {
+    color: #14532D;
+}
+
+.productImg {
+    width: 200px;
+    border-radius: 5px;
+}
+
+.productImages {
+    display: flex;
+    gap: 1vw;
+}
+
+.faqItem {
+    display: flex;
+    flex-direction: column;
+    /* gör att answer alltid hamnar under */
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+
+
+.faqItemHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    cursor: pointer;
-    padding: 15px 0;
-    /*border-bottom: 1px solid #e6e6e6;*/
-  }
-  .faqIcon{
+    width: 50%;
+}
+
+.faqItemHeader>p {
+    margin: 0;
+    width: 100%;
+}
+
+.faqIcon {
     font-weight: bold;
-      font-size: 20px;
-      transition: transform 0.3s;
-  }
-  .faqAnswer {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.4s ease;
-    font-size: 0.95rem;
-    color: #333;
-    padding-left: 5px;
-  }
+    font-size: 20px;
+    transition: transform 0.3s ease;
+}
 
-  .faqItem.active .faqAnswer {
-   
-    padding: 10px 0;
-  }
+.faqAnswer {
+    display: none;
+    /* dold från början */
+    margin-top: 0.5rem;
+}
 
-  .faqIcon:active{       
+.faqItem.active .faqAnswer {
+    display: block;
+    /* visas när man klickat */
+}
+
+
+.faqItem.active .faqIcon {
     transform: rotate(45deg);
-    height: 70vh;
 }
 
 #midLeft {
