--- a/index.css
+++ b/index.css
@@ -196,3 +196,31 @@ footer {
 .iconText{
     font-weight: bold;
 }
+
+#titelProduct{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+#titelProduct p{
+    font-size: 20px;
+}
+
+#titelProduct h1{
+    font-weight: lighter;
+}
+
+#produktInfo{
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 25vw;
+    height: 26vw;
+    letter-spacing: 1px;
+}
+
+#produktFakta h1{
+    font-weight: lighter;
+}
