--- a/index.css
+++ b/index.css
@@ -193,6 +193,7 @@ footer {
     justify-content: center;
     flex-direction: column;
     width: 25%;
+}
 
     #headerIcons {
         display: flex;
