--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ header {
     align-items: center;
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-weight: 400;
 }
 
