--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ header {
 }
 
 .brödTxt {
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     max-width: 35vw;
 }
 
@@ -182,27 +182,17 @@ footer {
 /* Fakta container */
 #containerFaktaAlgrent {
     display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  width: 100%;
-  background-color: #000;
-  color: white;
-  padding: 3rem 1rem;
-  gap: 2rem;
-  height: 50vh;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: #212121;
+    color: white;
+    padding: 3rem 1rem;
+    gap: 2rem;
+    height: 50vh;
 }
 
-.faktaRutor {
-    display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex: 1 1 250px;
-  margin-top: 7vh;
-  max-width: 300px;
-  gap: 20px;
-  height: 25vh;
-}
 
 /* Ikoner */
 #headerIcons {
@@ -235,11 +225,13 @@ footer {
 }
 
 #titelProduct p {
-    font-size: 20px;
+    font-size: 1.7vw;
+    font-weight: bold;
 }
 
 #titelProduct h1 {
     font-weight: lighter;
+    margin: 0;
 }
 
 #produktInfo {
@@ -252,6 +244,7 @@ footer {
 
 #produktFakta h1 {
     font-weight: lighter;
+    margin: 0;
 }
 
 .dropDownFact {
@@ -263,4 +256,14 @@ footer {
 
 .headerFaktaRutor {
     font-size: 1.5vw;
+}
+
+.faqItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1 1 250px;
+    max-width: 300px;
+    gap: 20px;
+    height: 25vh;
 }
