--- a/index.css
+++ b/index.css
@@ -278,7 +278,6 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1 1 250px;
     max-width: 300px;
     gap: 20px;
     height: 25vh;
@@ -383,13 +382,6 @@ footer {
     gap: 1vw;
 }
 
-.faqItem {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    /* gör att answer alltid hamnar under */
-    cursor: pointer;
-}
 
 
 .faqItemHeader {
@@ -416,7 +408,7 @@ footer {
 }
 
 
-.faqItem.active .faqIcon {
+.faqAnswer.active .faqIcon {
     transform: rotate(45deg);
 }
 
@@ -504,3 +496,4 @@ footer {
 .faqAnswer.active {
     display: flex;
 }
+
