--- a/index.css
+++ b/index.css
@@ -280,7 +280,7 @@ footer {
     justify-content: space-between;
     max-width: 300px;
     gap: 20px;
-    height: 25vh;
+    height: 30vh;
 }
 
 
@@ -469,6 +469,7 @@ footer {
 .faktaRutor.open {
     flex: 1 1 auto;
     max-width: 100%;
+    gap: 5vw;
 }
 
 /* Vänsterkolumn */
@@ -477,7 +478,7 @@ footer {
     /* fast bredd */
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 7.2vh;
 }
 
 
@@ -489,11 +490,11 @@ footer {
 .faqItem.open .faqAnswer {
     display: block;
 }
-.faqAnswer{
+
+.faqAnswer {
     display: none;
 }
 
 .faqAnswer.active {
     display: flex;
 }
-
