--- a/index.css
+++ b/index.css
@@ -194,6 +194,7 @@ footer {
     background-color: #212121;
     color: white;
     overflow-x: auto;
+    align-items: center;
     /* om det blir för många rutor kan man scrolla sidledes */
 }
 
@@ -463,7 +464,7 @@ footer {
     /* två kolumner */
     align-items: flex-start;
     overflow: hidden;
-    
+
 }
 
 .faktaRutor.open {
@@ -478,7 +479,7 @@ footer {
     /* fast bredd */
     display: flex;
     flex-direction: column;
-    gap: 7.2vh;
+    gap: 3.7vh;
 }
 
 
