--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #f9fcfb;
+    background-color: #fefffe;
     margin: 0;
     overflow-x: hidden;
     /* för säkerhets skull */
@@ -549,3 +549,13 @@ footer {
     text-shadow: 0 4px 8px black;
   }
   
+  #pris{
+    margin: 0px;
+  }
+
+  .contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
