--- a/index.css
+++ b/index.css
@@ -293,6 +293,7 @@ footer {
     background-color: #f8faf9;
     justify-content: center;
     width: 90vw;
+    margin-bottom: 6vh;
 }
 
 #containerTopProdukt {
@@ -572,6 +573,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-size: 1.2vw;
   }
 
 
