--- a/form.css
+++ b/form.css
@@ -26,6 +26,7 @@
 
 #info {
     width: 42vw;
+    font-weight: bold;
 }
 
 #formPage {
@@ -51,6 +52,8 @@
 #beställKnapp {
     display: flex;
     justify-content: flex-end;
+    gap: 5vw;
+    align-items: center;
 }
 
 #beställKnapp button {
@@ -94,11 +97,13 @@ body {
     font-size: 20px;
     font-weight: 600;
     color: #000000;
+    margin: 0;
 }
 
 .container p {
     font-size: 20px;
     color: #555;
+    margin: 0;
 }
 
 
@@ -108,6 +113,7 @@ body {
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
     padding: 2vw;
     text-align: left;
+    margin-top: 1.3vh;
 }
 
 .order-card h3 {
@@ -119,7 +125,7 @@ body {
     font-size: 1rem;
     color: #333;
     margin-bottom: 1;
-    padding: 1vw;
+    padding: 0.5vw;
     background: #f4f9f7;
     border-radius: 6px;
 }
@@ -163,4 +169,8 @@ button.confirm {
 
 button.confirm:hover {
     background: #145c37;
+}
+
+#Pris {
+    font-size: 1.5vw;
 }
