--- a/form.css
+++ b/form.css
@@ -52,7 +52,7 @@
 
 #beställKnapp {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     gap: 5vw;
     align-items: center;
 }
