--- a/index.css
+++ b/index.css
@@ -1,6 +1,16 @@
 /* Grundinställningar */
+
+@font-face {
+    font-family: 'MyFont';
+    src: url('Fonts/Roboto(1)/Roboto-VariableFont_wdth,wght.ttf') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 * {
     box-sizing: border-box;
+    font-family: 'MyFont';
 }
 
 body {
@@ -598,9 +608,9 @@ footer {
     align-items: center;
 }
 
-#FormBottomBtn:hover{
+#FormBottomBtn:hover {
     background-color: #45a049;
-  transform: scale(1.03);
+    transform: scale(1.03);
 
 }
 
