--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'MyFont';
-    src: url('Fonts/Roboto(1)/Roboto-VariableFont_wdth,wght.ttf') format('woff2');
+    src: url('Fonts/Raleway-Regular.ttf') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -246,8 +246,8 @@ footer {
 /* Produkt */
 #titelProduct {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: start;
     justify-content: space-between;
 }
 
@@ -332,8 +332,7 @@ footer {
     display: flex;
     flex-direction: column;
     width: 40%;
-
-    justify-content: space-evenly;
+    gap: 2vw;
 }
 
 #TopRightDiv>h1 {
@@ -574,7 +573,7 @@ footer {
     /* syns mot bilden */
     font-size: 3vw;
     /* större text */
-    font-weight: bold;
+    font-weight: 1000;
     text-align: center;
     text-shadow: 0 4px 8px black;
 }
