--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'MyFont';
-    src: url('Fonts/Roboto(1)/Roboto-VariableFont_wdth,wght.ttf') format('woff2');
+    src: url('Fonts/Fira_Sans/FiraSans-Light.ttf') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -483,7 +483,7 @@ footer {
     flex-direction: row;
     /* två kolumner */
     align-items: flex-start;
-    overflow: hidden;
+
 
 }
 
