--- a/index.css
+++ b/index.css
@@ -267,12 +267,12 @@ footer {
 }
 
 .faqItem {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 300px;
-    gap: 20px;
-    height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2vw;
+  height: 30vh;
+  min-width: 20vw;
 }
 
 #containerProdukt {
@@ -462,6 +462,7 @@ footer {
     gap: 5vw;
 }
 
+
 .faqContentLeft {
     flex: 0 0 300px;
     display: flex;
@@ -478,12 +479,21 @@ footer {
 }
 
 .faqAnswer {
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease, opacity 0.3s ease;
+  }
+  
+  .faqAnswer.active {
+    opacity: 1;
+    max-height: 100%;
+    min-width: 70vw;
+  }
+  
+  .faktaRutor.hidden {
     display: none;
-}
-
-.faqAnswer.active {
-    display: flex;
-}
+  }
 
 .btn {
     background-color: #14532d;
