--- a/index.css
+++ b/index.css
@@ -267,12 +267,12 @@ footer {
 }
 
 .faqItem {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 2vw;
-  height: 30vh;
-  min-width: 20vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2vw;
+    height: 30vh;
+    min-width: 100%;
 }
 
 #containerProdukt {
@@ -454,6 +454,8 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    justify-content: center;
+    width: 25%;
 }
 
 .faktaRutor.open {
@@ -483,17 +485,17 @@ footer {
     opacity: 0;
     overflow: hidden;
     transition: max-height 0.4s ease, opacity 0.3s ease;
-  }
-  
-  .faqAnswer.active {
+}
+
+.faqAnswer.active {
     opacity: 1;
     max-height: 100%;
     min-width: 70vw;
-  }
-  
-  .faktaRutor.hidden {
+}
+
+.faktaRutor.hidden {
     display: none;
-  }
+}
 
 .btn {
     background-color: #14532d;
@@ -646,16 +648,16 @@ footer {
         flex-direction: column;
         gap: 4vh;
         align-items: center;
-      }
-    
-      .containerInfo .MellanstoraBilder {
-        order: -1; 
+    }
+
+    .containerInfo .MellanstoraBilder {
+        order: -1;
         max-width: 90%;
-      }
-    
-      .containerInfo .containerTxt {
+    }
+
+    .containerInfo .containerTxt {
         width: 90%;
-      }
+    }
 
     .containerTxt {
         width: 90%;
@@ -756,7 +758,8 @@ footer {
         font-size: 4vw;
         padding: 12px;
     }
-    #produktFakta h1{
+
+    #produktFakta h1 {
         font-size: 6vw;
     }
 }
