--- a/index.css
+++ b/index.css
@@ -763,4 +763,11 @@ footer {
     #produktFakta h1 {
         font-size: 6vw;
     }
+    .faqIcon{
+        font-size: 7vw;
+    }
+    .dropDownFact{
+        gap: 5%;
+        font-size: 4.5vw;
+    }
 }
